--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,128 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="yeiwon-seadronix.netlify.app" />
-    <meta property="og:title" content="Seadronix" />
-    <meta property="og:site_name" content="Seadronix" />
-    <meta
-      property="og:description"
-      content="인공지능 기술을 통해 해양물류의 혁신을 이끌어 나갑니다. "
-    />
-    <meta
-      property="og:image"
-      content="../images/layout/main-overview-logo-1.jpg"
-    />
-    <title>Seadronix</title>
-    <link
-      rel="shortcut icon"
-      href="../images/layout/favicon.png"
-      type="image/x-icon"
-    />
-    <!-- Google 웹 폰트 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Pretendard 폰트 -->
-    <link
-      rel="stylesheet"
-      as="style"
-      crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/aos.css" />
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <!-- script jsc > enter -->
-    <script src="../js/aos.js"></script>
-    <script src="../js/swiper-bundle.min.js"></script>
-  </head>
-  <body>
-    <header class="header">
-      <h1 class="logo">
-        <a href=""
-          ><img
-            src="../images/layout/logo-dark.svg"
-            alt="seadronix logo"
-            class="logo__img--dark"
-          /><img
-            src="../images/layout/logo-light.svg"
-            alt="seadronix logo2"
-            class="logo__img--light"
-          />
-        </a>
-      </h1>
-      <nav class="gnb">
-        <h2 class="hidden">global navigation</h2>
-        <ul class="list">
-          <li>
-            <a href="">COMPANY</a>
-            <ul class="depth02">
-              <li><a href="">VISION</a></li>
-              <li><a href="">LEADERSHIP</a></li>
-              <li><a href="">PARTNERS</a></li>
-              <li><a href="">HISTORY</a></li>
-              <li><a href="">CERTIFICATES</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="">TECHNOLOGY</a>
-            <ul class="depth02">
-              <li><a href="">OVERVIEW</a></li>
-              <li><a href="">AI</a></li>
-              <li><a href="">SENSOR FUSION</a></li>
-              <li><a href="">PUBLICATION</a></li>
-              <li><a href="">PATENT</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="">PRODUCT</a>
-            <ul class="depth02">
-              <li><a href="">OVERVIEW</a></li>
-              <li><a href="">AVISS</a></li>
-              <li><a href="">NAVISS</a></li>
-              <li><a href="">CASE STUDY</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="">PRESS</a>
-            <ul class="depth02">
-              <li><a href="">NEWS</a></li>
-              <li><a href="">VIDEO</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="">CAREER</a>
-            <ul class="depth02">
-              <li><a href="">CULTURE</a></li>
-              <li><a href="">BENEFITS</a></li>
-              <li><a href="">RECRUITMENT</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="">CONTACT</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="language">
-        <a href="" class="active">KO</a>
-        <a href="">EN</a>
-      </div>
-    </header>
-    <!-- bem (block__element--modifier) -->
-    <!-- naming줄 때 언더바 두번 __ -->
+<%- include("./include/header.ejs") %>
     <main class="main">
       <!-- <button class="btn btn--primary"></button> -->
       <section class="visual">
@@ -556,48 +432,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-items">
-          <div class="footer__item">
-            <img
-              src="../images/layout/logo-light.svg"
-              alt=""
-              class="footer-logo"
-            />
-          </div>
-          <div class="footer__item">
-            <h2>Office</h2>
-            <!-- 정의 내릴 수 있을 때 쓰임 -->
-            <dl>
-              <dt>본사</dt>
-              <dd>울산광역시 남구 매암로28, 201호</dd>
-            </dl>
-            <dl>
-              <dt>연구소</dt>
-              <dd>서울특별시 강남구 테헤란로20길20, 3층</dd>
-            </dl>
-            <dl>
-              <dt>공장</dt>
-              <dd>서울특별시 성동구 광나루로 144, 707호</dd>
-            </dl>
-          </div>
-          <div class="footer__item">
-            <h2>Contact Us</h2>
-            <dl>
-              <dt>일반 문의</dt>
-              <dd>contact@seadronix.com</dd>
-            </dl>
-          </div>
-          <div class="footer__item">
-            <h2>제품 문의하기</h2>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <p>ⓒ 2022 Seadronix Inc. All rights reserved.</p>
-        </div>
-      </div>
-    </footer>
+    
     <button class="btn-top">
       <span class="material-icons"> north </span>
     </button>
@@ -639,3 +474,4 @@
     </script>
   </body>
 </html>
+<%- include("./include/footer.ejs") %>
