--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -1,7 +1,4 @@
-<%- include("./include/header.ejs") %>
-<main class="main">
-  <div class="sub-contents__title">
-    <h2 class="sub-title"><%= subTitle %></h2>
-  </div>
-</main>
-<%- include("./include/footer.ejs") %>
+<!-- prettier-ignore -->
+<%- include("./include/sub-header.ejs") %>
+//여기서부터 코딩
+<%- include("./include/sub-footer.ejs") %>
