--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="../css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/contents.css" />
     <!-- script jsc > enter -->
     <script src="../js/aos.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
@@ -71,7 +72,7 @@
             <a href="">COMPANY</a>
             <ul class="depth02">
               <li><a href="/vision">VISION</a></li>
-              <li><a href="">LEADERSHIP</a></li>
+              <li><a href="/search">LEADERSHIP</a></li>
               <li><a href="">PARTNERS</a></li>
               <li><a href="">HISTORY</a></li>
               <li><a href="">CERTIFICATES</a></li>
